fixed .roomText overflow

--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ body {
     height: 100%;
     border-radius: 30px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-    align-self: stretch;
 }
 
 .className {
@@ -82,11 +81,13 @@ body {
 }
 
 .roomText {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
+    margin-left: 10px;
     font-size: 42px;
+    max-width: 90%;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100%;
 }
 
 .grid-hr {
@@ -110,14 +111,15 @@ body {
     padding: 20px;
     background-color: var(--gray-bg-2);
     border-radius: 40px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 #cellsWrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, calc(100% / 3));
     grid-template-rows: repeat(4, 1fr);
     gap: 20px;
+    width: calc(100% - 40px);
     height: 100%;
 }
 
